# apps

./: .gitignore  index.html  style.css
.claude/: launch.json  settings.local.json
bejeweledGame/: index.html
bejeweledGame/.claude/: launch.json
bejeweledGame/src/: audio.js  (+6 more)
duty_Schedule/: 200.html  _payload.json  index.html
duty_Schedule_src/: nuxt.config.ts  package-lock.json
footballAnimationLive/: index.html
footballBroadcastLive/: index.html
fruitSlotGame/: PROMPT.md  index.html
hokaido/: index.html
jetPackGame/: index.html  style.css
jumpVerticalGame/: index.html  style.css
mergeShooter/: index.html  style.css
minesweeper/: index.html
monopoly/: GAME_SPEC.md  index.html  package-lock.json  package.json  vite.config.ts
monopolyGame/: 2d.html  3d.html  CLAUDE.md  index.html  v2.html
nineBallGame/: index.html  style.css
osakaTour/: osaka-tour.html  大阪京都旅遊規劃_2025黃金週.docx
pkGame/: index.html
pokerGame/: game.js  index.html  styles.css
pokerGame-mp/: .gitignore  README.txt  game.js  index.html  package-lock.json  package.json  server.js
pongFootball/: game_info.txt  index.html  style.css
robberRun/: index.html  style.css
skyRaider/: .gitignore  index.html
skyRaider/App/src-tauri/: Cargo.toml  tauri.conf.json
skyRaider/App/src-tauri/src/: lib.rs  main.rs
slotGame/: PROMPT.md  index.html
slotGame_2/: Help.txt  index.html
slot_game/: index.html  mind.txt  package-lock.json  package.json
snake_game/: index.html
stormofSeth/: index.html
survivorGame/: index.html  style.css
xenoTactic/: PROMPT.md  index.html
(+232 files in other folders)
