[package]
name = "sky-raider"
version = "0.1.0"
description = "Sky Raider desktop shell"
authors = ["Sky Raider Team"]
edition = "2021"

[lib]
name = "sky_raider_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
